--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -246,7 +246,7 @@ a {
     
     div{
         text-align: center;
-        width: 25%!important;
+        width: 25%;
     }
     h1 {
         align-self: center;
@@ -270,6 +270,9 @@ a {
     h3{
         align-self: center;
     }
+}
+.icon-button{
+    width:10%!important;
 }
 
 .cart-card {
