--- a/src/My Account/myaccount.scss
+++ b/src/My Account/myaccount.scss
@@ -4,17 +4,29 @@
 }
 .my-account-menu{
     width: 20%;
-    border-right: 2px solid;
+    background-color: #fcfcfc;
+    padding: 20px 30px;
+    margin: 2%;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    border-radius: 2px;
+
+    li {
+        padding: 10px 6px;
+    }
 }
 .my-account-menuitem{
-    width:95%;
-    height:60px;
-    border: 1px outset;
-    margin: 2%;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 2px;
+    border: 1px solid #f1f1f1;
     
     h1{
-        margin:5%;
-        color: #21419A;
+        color: #000000;
+        font-size: 16px;
+        margin-bottom: 0;
+        padding: 12px 10px;
+        text-align: center;
+        font-family: LatoRegular;
     }
 }
 .my-account-detail{
