cart-page-ui-fixed

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -273,7 +273,7 @@ a {
     display: flex;
     justify-content: space-between;
     // flex-direction: row;
-    align-items: center;
+    // align-items: center;
     padding: 8px 6px;
     
     div{
@@ -298,10 +298,14 @@ a {
         align-self: center;
         height: fit-content;
         width: 100%;
+        border: 1px solid #cbcbcb;
+    border-radius: 2px;
+    padding: 4px 6px;
     }
     h3{
         align-self: center;
-        font-size: 13px;
+        font-size: 12px;
+        margin-bottom: 4px;
     }
 }
 .icon-button{
@@ -345,8 +349,8 @@ a {
 .cart {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    border: ridge;
+    justify-content: space-around;
+    box-shadow: rgb(17 17 26 / 10%) 0px 4px 12px;
 }
 
 .cart-header {
@@ -357,7 +361,7 @@ a {
 .cart-list {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 60%;
     margin-top: 5%;
 
 }
@@ -378,7 +382,7 @@ a {
     display: block;
     padding: 3%;
     margin-top: 3%;
-    // block-size: 100%;
+    width: 34%;
     justify-content: center;
     text-align: center;
 }
@@ -394,24 +398,26 @@ a {
     background-color: #ffffff;
 
     h1 {
-        font-size: 45px;
-        color: #21419A;
+        font-size: 30px;
+        color: #000;
     }
 }
 
 .button-div {
-    width: 120%;
+    width: 100%;
     display: flex;
     justify-content: center;
-    // margin-top: 10%;
+    margin-top: 24px;
 
     button {
         border: solid;
-        border-color: #00b18f;
-        background-color: #00b18f;
-        color: #ffffff;
-        padding: 1% 10% 1% 10%;
-        border-radius: 15px;
+    border-color: #00b18f;
+    background-color: #00b18f;
+    color: #ffffff;
+    padding: 6px 20px;
+    border-radius: 2px;
+    width: 100%;
+    font-weight: 600;
     }
 }
 .button-div1 {
@@ -518,13 +524,34 @@ a {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    margin-bottom: 40px;
 }
 .order-summery-list{
-    width:30%;
-    align-self:center;
+    width: 30%;
+    align-self: center;
+    background-color: #fff;
+    padding: 30px 20px;
+    box-shadow: rgb(0 0 0 / 15%) 0px 4px 8px 0px;
 }
 .order-summery-re{
     width:30%;
     align-self: center;
     padding-top: 20px;
+}
+
+.icon-button.icon-left {
+    text-align: right;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+}
+
+button.btn-icon-pd {
+    font-size: 14px;
+    padding: 1px;
+    color: #545454;
+}
+
+button.btn-icon-pd:hover {
+    color: #f30c0c;
 }
