login and register page css fixed

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -400,8 +400,9 @@ a {
     background-color: #ffffff;
 
     h1 {
-        font-size: 30px;
-        color: #000;
+        font-size: 26px;
+    color: #000;
+    font-weight: 600;
     }
 }
 
