--- a/src/My Account/changepassword.scss
+++ b/src/My Account/changepassword.scss
@@ -15,9 +15,12 @@ h2.wrap-title {
 }
 
 button.text-dark {
-    text-decoration: underline;
     font-size: 12px;
-    color: #db2222;
+    color: #ffffff !important;
+    background-color: #db2222;
+    padding: 10px 20px;
+    font-weight: 600;
+    border-radius: 2px;
 }
 
 a.font-medium.text-color:hover {
