checkout page UI Fixed

--- a/src/My Account/changepassword.scss
+++ b/src/My Account/changepassword.scss
@@ -12,6 +12,7 @@ h2.wrap-title {
 .form-field {
     border-radius: 2px;
     border: 1px solid #bebebe;
+    padding: 21px 14px;
 }
 
 button.text-dark {
@@ -30,4 +31,13 @@ a.font-medium.text-color:hover {
 label.form-block {
     display: block;
     margin-bottom: 6px;
+}
+
+.form-field:focus {
+    box-shadow: none !important;
+    border-color: #38b18f !important;
+}
+
+.form-field:active {
+    color: #38b18f;
 }
