--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -408,8 +408,8 @@ a {
 
 .button-div {
     width: 100%;
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
     margin-top: 24px;
 
     button {
