--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -637,3 +637,7 @@ nav.nav-items {
 .authorization-link li a:hover {
     color: #38b18f;
 }
+
+.nav-link:hover {
+    color: #38b18f !important;
+}
