Profile, Mini-cart  & new address page UI fixed

--- a/src/My Account/savedaddress.scss
+++ b/src/My Account/savedaddress.scss
@@ -1,16 +1,16 @@
 .saved-address-body-wrap {
     background-color: #fff;
-    box-shadow: rgb(0 0 0 / 24%) 0px 2px 4px;
-    padding: 30px 36px;
+    // box-shadow: rgb(0 0 0 / 24%) 0px 2px 4px;
+    // padding: 30px 36px;
     margin-top: 28px;
     margin-right: 30px;
     margin-bottom: 30px;
 }
 
 h2.saved-address-title{
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
-    margin-bottom: 22px;
+    margin-bottom: 20px;
 }
 
 .home-address, .office-address {
