--- a/src/pages/checkout.scss
+++ b/src/pages/checkout.scss
@@ -28,7 +28,7 @@ img.order-summary-product-img {
 
 .order-summary-product {
     background-color: #fff;
-    border: 1px solid #bebebe;
+    border: 1px solid #e7e7e7;
     margin-bottom: 16px;
     padding: 22px;
     border-radius: 2px;
@@ -124,7 +124,7 @@ input.form-check-delivery {
 .shipping-method-size {
     display: flex;
     align-items: flex-start;
-    border: 1px solid #bebebe;
+    border: 1px solid #e7e7e7;
     margin-bottom: 16px;
     padding: 20px 16px;
     border-radius: 2px;
